--- a/css/responsive.css
+++ b/css/responsive.css
@@ -194,7 +194,7 @@
     .content-img img {
         width: 100%;
         height: auto;
-        padding-right: 0px;
+        margin-right: 0px;
     }
 
     .shield {
