--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 html {
     scroll-behavior: smooth;
+    background-color: rgb(247, 247, 247);
 }
 
 .container {
@@ -43,6 +44,10 @@ nav .logo a:hover {
     background-color: rgba(0, 0, 0, 0);
 }
 
+nav ul a {
+    padding: 20px;
+}
+
 .nav {
     height: 100px;
     display: flex;
@@ -58,7 +63,6 @@ nav img {
 nav a {
     text-decoration: none;
     color: #bf2227;
-    /* padding: 20px; */
 }
 
 nav a:hover {
@@ -150,7 +154,7 @@ nav ul {
 .inner-hero-research a{
     text-decoration: none;
     color: #484848;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .inner-hero-research a:hover{
@@ -190,12 +194,12 @@ nav ul {
 .shield {
     display: flex;
     flex-direction: row;
-    padding: 30px;
+    margin: 30px;
 }
 
 .shield img {
     width: 70vh;
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .title {
@@ -222,20 +226,28 @@ nav ul {
     text-decoration: none;
     font-size: 20px;
     line-height: 50px;
-    padding: 10px;
+    margin: 10px;
     border-radius: 10px;
     margin-top: 50px;
 }
 
 .content-img img {
     height: 50vh;
-    padding-right: 30px;
+    margin-right: 30px;
+}
+
+.content-iot {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    /* flex-wrap: wrap; */
+
 }
 
 .content-img-act {
     width: 29%;
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
+    /* padding: 10px; */
 }
 
 .content-img-act img {
@@ -247,6 +259,7 @@ nav ul {
 .content-img-act a {
     color:#bf2227;
     text-decoration: none;
+    text-align: center;
 }
 
 .content-img-act a b {
@@ -264,7 +277,7 @@ nav ul {
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    padding: 10px 10px;
+    margin: 10px;
     width: 100%;
 }
 
@@ -273,7 +286,7 @@ nav ul {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    padding-right: 30px;
+    margin-right: 30px;
     line-height: 30px;
 }
 
@@ -354,7 +367,7 @@ footer {
 
 .footer-block {
     text-align: center;
-    padding: 10px;
+    padding: 30px;
     color: white;
     background-color: #bf2227;
     font-weight: bold;
@@ -405,7 +418,7 @@ footer {
     display: flex;
     margin-bottom: 2rem;
     position: relative;
-    box-shadow: 0 10px 42px rgba(25,17,34,.1);
+    box-shadow: 0 10px 10px rgba(25,17,34,.1);
     padding: 2rem;
     z-index: 0;
 }
@@ -419,8 +432,8 @@ footer {
 
 .form {
     background-color:whitesmoke;
-    border-radius: 20px;
-    box-shadow: 0 10px 42px rgba(25,17,34,.1);
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(25,17,34,.1);
     padding: 30px;
     text-align: center;
     display: flex;
