--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ hr {
     border-bottom: 1px solid #bf2227;
 }
 
+.hr-nav {
+    margin-top: 0px;
+}
+
 nav {
     background-color:whitesmoke;
     position: fixed;
@@ -79,6 +83,45 @@ nav ul {
     width: 30%;
 }
 
+.dropdown .dropbtn {
+    color: #bf2227;
+    font-size: 16px;  
+    border: none;
+    outline: none;
+}
+
+.dropbtn {
+    /* background-color: #bf2227; */
+    padding-bottom: 10px;
+    background-color: inherit;
+}
+
+.dropdown-content {
+    margin-top: 10px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-content a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #bf2227;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .progress-container {
     width: 100%;
     height: 5px;
@@ -88,7 +131,6 @@ nav ul {
 }
 
 .progress-bar {
-
     height: 5px;
     background: #bf2227;
     width: 0%;
@@ -295,6 +337,7 @@ nav ul {
     text-decoration: none;
     color: #bf2227;
     padding: 20px;
+    margin-left: -20px;
 }
 
 .content-text a:hover {
@@ -331,6 +374,10 @@ nav ul {
     justify-content: flex-start;
     background-color: #484848;
     margin-bottom: 100px;
+}
+
+.fas, .fab {
+    color: #bf2227;
 }
 
 footer {
@@ -371,6 +418,22 @@ footer {
     color: white;
     background-color: #bf2227;
     font-weight: bold;
+}
+
+.footer-block p {
+    padding: 5px;
+}
+
+.footer-block a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+.footer-block a:hover {
+    color: blue;
+}
+.footer-block .fab {
+    color: whitesmoke;
 }
 
 .welcome-event {
