delete unused element

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 769px) { 
+@media screen and (max-width: 769px) { 
     .container {
         margin: 0px 50px;
     }
@@ -76,9 +76,18 @@
     .content-img-act a {
         font-size: 15px !important;
     }
+
+    .form {
+        width: 90%;
+    }
 }
 
-@media (max-width: 576px) {
+@media screen and (max-width: 576px) {
+
+    .shield img {
+        margin: 0px;
+    }
+
     .container {
         margin: 0px 20px;
     }
@@ -86,7 +95,6 @@
     .inner-hero {
         text-align: center;
         flex-direction: column-reverse;
-        justify-content: ce;
         align-items: center;
         margin-top: -80vh;
     }
@@ -148,7 +156,7 @@
     }
 
     .form {
-        width: 100%;
+        width: 90%;
     }
 
     .footer-text ul {
@@ -158,7 +166,7 @@
 
 }
 
-@media (max-width: 481px){
+@media screen and (max-width: 481px){
     .container {
         margin: 0px 10px;
     }
