--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     font-family: 'Lato', sans-serif;
     text-transform: lowercase;
     transition: 0.5s;
+    /* overflow-x: hidden; */
+}
+
+main {
+    overflow-x: hidden;
 }
 
 html {
@@ -53,7 +58,7 @@ nav ul a {
 }
 
 .nav {
-    height: 100px;
+    height: 15vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -126,7 +131,7 @@ nav ul {
     width: 100%;
     height: 5px;
     background: #ccc;
-    margin-top: 100px;
+    margin-top: 15vh;
     position: fixed;
 }
 
@@ -330,6 +335,7 @@ nav ul {
     justify-content: space-around;
     margin-right: 30px;
     line-height: 30px;
+    width: 100%;
 }
 
 .content-text a {
